# AdventOfCode

./: README.md
2017/: CMakeLists.txt
2017/include/: utilities.hpp
2017/src/: day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  utilities.cpp
2022/: Manifest.toml  Project.toml
2022/data/: 7.txt
2022/src/: AoC2022.jl  day11.jl
2023/: Package.swift
2023/Sources/: day00.swift  day01.swift  main.swift
AdventOfCode2023/: Package.swift
AdventOfCode2023/Sources/: day00.swift  day02.swift  main.swift
